# foxy-fabrications-admin

./: .gitignore  Cargo.toml  Containerfile  VERSION_INFO.md  sonar-project.properties  version.txt
.github/workflows/: commit.yaml  container-release.yml
src/: auth.rs  lib.rs  main.rs  models.rs  user_state.rs
src/handlers/: auth.rs  calculator.rs  order_processing.rs  product_management.rs  quote_processing.rs  version.rs
static/: index.html  script.js  styles.css  styles_old.css
templates/: base.html  calculator.html  create_products.html  edit_product.html  header.html  login.html  order_processing.html  product_management.html  quote_processing.html
tests/unit/: mod.rs
