[package]
name = "foxy-fabrications-admin"
version = "0.1.0"
edition = "2024"
default-run = "foxy-fabrications-admin"

# Define the main binary (admin server)
[[bin]]
name = "foxy-fabrications-admin"
path = "src/main.rs"

[dependencies]
# Core web framework
anyhow = "1.0.98"
argon2 = "0.5.3"
chrono = {version = "0.4.39", features = ["serde"]}
askama = "0.14.0"
async-trait = "0.1.88"
axum = {version = "0.8.4", features = ["multipart", "macros"]}
axum-login = "0.17.0"
dotenv = "0.15.0"
futures-util = "0.3.31"
mongodb = {version = "3.2.4", default-features = false, features = ["rustls-tls", "compat-3-0-0", "dns-resolver"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.134"
reqwest = {version = "0.12.9", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "deflate", "cookies"]}
thiserror = "2.0.12"
tokio = {version = "1.45.1", features = ["full"]}
tower = {version = "0.5", features = ["util"]}
tower-cookies = "0.11.0"
tower-http = {version = "0.6.4", features = ["fs", "redirect"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
uuid = "1.17.0"
# Email functionality
lettre = {version = "0.11.10", default-features = false, features = ["smtp-transport", "pool", "hostname", "builder", "tokio1", "tokio1-rustls-tls"]}

[dev-dependencies]
# Testing framework and utilities
tokio-test = "0.4"
axum-test = "15.0"
reqwest = { version = "0.12.9", features = ["json", "cookies"] }
serde_json = "1.0"
# Mock data and fixtures
fake = "2.9"
once_cell = "1.20"
